UPDATE: Tested Login functionalty on Ascend app New implmented methods: Add Ascend login page object and test cases
- Implemented AscendLoginLocaters for UI element identification.
- Created AscendLoginPage class for encapsulating login functionalities.
- Developed test cases for valid and invalid login scenarios, including:
  - Valid login
  - Invalid password
  - Invalid email
  - Empty email and password
  - Case sensitive email
  - Forget password functionality
- Added setup fixture to initialize the login page and handle notifications.
- Integrated logging for better traceability of test execution.

--- a/config1.json
+++ b/config1.json
@@ -1,9 +1,10 @@
 {
   "platformName": "Android",
-  "deviceName": "Android Emulator",
-  "automationName": "UiAutomator2",
-  "app": "D:\\senior i second term\\software engineering\\Project Testing Set Up\\APK\\linkedin-6-0-125.apk",
-  "appPackage": "com.linkedin.android",
-  "appActivity": "com.linkedin.android.growth.login.LoginActivity",
-  "newCommandTimeout": 300
+  "appium:deviceName": "Android Emulator",
+  "appium:automationName": "UiAutomator2",
+  "appium:app": "C:\\Users\\DELL\\Downloads\\app-release.apk",
+  "appium:appPackage": "com.example.ascend_app",
+  "appium:appActivity": "com.example.ascend_app.MainActivity",
+  "appium:appWaitActivity": "*",
+  "appium:newCommandTimeout": 3600
 }
